[metadata]
name = dbcsep
description = CSEP Database management application
long_description = file: README.md
long_description_content_type = text/markdown
author = Danijel Schorlemmer
author_email = ds@gfz-potsdam.de
license = GNU Affero General Public License v3.0
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3.11
url = https://github.com/cseptesting/dbcsep.git

[options]
packages =
    dbcsep
install_requires =
    packaging
    numpy
    obspy
    mercantile
    shapely
    pycsep
python_requires >= 3.11
zip_safe = no

[options.packages.find]
include = dbcsep*

[options.extras_require]
dev =
    packaging
    numpy
    obspy
    mercantile
    shapely
    pycsep
    flake8
    mypy
    pytest-cov
    pytest
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx-rtd-theme
    tox

[flake8]
max-line-length = 79